Move tests to individual file

--- a/Vector.vcxproj
+++ b/Vector.vcxproj
@@ -164,8 +164,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\test_example_functions.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\test_example_functions.h" />
     <ClInclude Include="src\vector.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
